# stm32h743_mvp

./: .gdbinit  Cargo.toml  LICENSE  README.md  memory.x
.cargo/: config.toml
gdb/: .gdbinit  STM32H743.svd
platform/stm32f411/: Cargo.toml  Embed.toml  memory.x
platform/stm32f411/src/: main.rs
platform/stm32h743/: Embed.toml
src/: main.rs
