[package]
name = "stm32h743_mvp"
authors = ["Josef Utbult"]
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0
debug = true

[dependencies]
stm32h7 = { version = "0.15", features = ["stm32h743", "rt"] }
cortex-m-rt = { version = "0.7.5" }
cortex-m = { version = "0.7.0", features = ["critical-section-single-core"] }
rtt-target = "0.6.2"
